# mini-proxy

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
app/config/: Cargo.toml
app/config/src/: config.rs
app/server/: Cargo.toml
app/server/src/: lib.rs  server.rs
cmd/mini-proxy/: Cargo.toml
cmd/mini-proxy/src/: main.rs
error/: Cargo.toml
error/src/: error.rs  lib.rs
etc/: config.toml  license.template
protocol/mysql/: Cargo.toml
protocol/mysql/src/: charset.rs  err.rs  lib.rs  mysql_const.rs  util.rs
protocol/mysql/src/client/: auth.rs  codec.rs  conn.rs  err.rs  mod.rs  resultset.rs  stmt.rs  stream.rs
protocol/mysql/src/server/: conn.rs  err.rs  mod.rs  packet.rs  stream.rs  tls.rs
protocol/postgresql/: Cargo.toml  README.md  lib.rs
protocol/redis/: README.md
proxy/: Cargo.toml
proxy/mysql/: Cargo.toml
proxy/mysql/src/: lib.rs  proxy.rs
proxy/pool/: Cargo.toml
proxy/pool/src/: conn_pool.rs  lib.rs
proxy/postgresql/: Cargo.toml
proxy/postgresql/src/: lib.rs  proxy.rs
proxy/src/: factory.rs  proxy.rs
proxy/src/listener/: listener.rs  mod.rs
runtime/mysql/: Cargo.toml
runtime/mysql/src/: config.rs  lib.rs  mysql.rs
runtime/mysql/src/server/: mod.rs  server.rs
runtime/postgresql/: Cargo.toml  README.md
runtime/postgresql/src/: lib.rs  postgresql.rs
runtime/postgresql/src/server/: mod.rs
