[package]
name = "config"
version = "0.1.0"
edition = "2021"

[dependencies]
toml = "0.5"
serde = { version = "1.0.133", default-features = false, features = ["derive"] }
serde_derive = "1.0"
clap = "3.1.9"
tracing = "0.1.13"
tracing-subscriber = "0.2.2"
proxy_mysql = {path = "../../proxy/mysql"}
proxy = {path = "../../proxy"}