[package]
name = "runtime_postgresql"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = "0.1.13"
tracing-subscriber = "0.2.2"
async-trait = "0.1"
tokio = { version = "1.0.0", features = ["full", "tracing"] }
tokio-util = { version = "0.6.7", features = ["full"] }
tokio-stream = { version = "0.1" }
bytes = "1"
byteorder = "0.5.3"
futures = "0.3.5"
proxy = {path = "../../proxy"}
proxy_postgresql = {path = "../../proxy/postgresql"}
mini_proxy_error = {path = "../../error"}
# mysql_protocol = {path = "../../protocol/postgresql"}
conn_pool = { path = "../../proxy/pool"}